Init engine structure

--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -4,5 +4,5 @@ set(ENGINE_HEADERS include/engine/engine.hpp)
 set(ENGINE_SOURCES src/engine.cpp)
 
 add_library(engine STATIC ${ENGINE_HEADERS} ${ENGINE_SOURCES})
-target_include_directories(engine INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include)
-
+target_include_directories(engine INTERFACE include)
+target_include_directories(engine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
